--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "ngx-facebook": "^2.4.0",
     "rxjs": "^5.5.2",
     "semantic-ui-card": "^2.2.12",
     "semantic-ui-css": "^2.2.12",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.3",
+    "@angular/cli": "^1.6.6",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
